updated .env.example file

--- a/.env.example
+++ b/.env.example
@@ -40,8 +40,4 @@ IRONPORT_PASSWORD=AnotherSuperSecretPa$$word
 SECURITYCENTER_USERNAME=security.username
 SECURITYCENTER_PASSWORD=security.pa$$word
 
-CRAWLERS=/opt/PHP-SecurityServicesScraper/app/Console/crawlers/
-RESPONSES=/opt/PHP-SecurityServicesScraper/storage/app/responses/
-COLLECTIONS=/opt/PHP-SecurityServicesScraper/storage/app/collections/
-COOKIES=/opt/PHP-SecurityServicesScraper/storage/app/cookies/
-
+PHISHME_TOKEN=your.phishme.token
