--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,20 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/metaclassing/adLDAP.git"
+        }
+    ],
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "metaclassing/utility": "dev-master"
+        "metaclassing/utility": "dev-master",
+        "dingo/api": "1.0.x@dev",
+        "adldap/adldap": "4.0.4.x-dev",
+        "phpseclib/phpseclib": "^2.0",
+        "tymon/jwt-auth": "^1.0"
     },
     "minimum-stability": "dev",
     "require-dev": {
