Installed silber/bouncer

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,17 @@ PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
 
+LDAP_AUTH=1
+LDAP_USER=null
+LDAP_PASS=null
+LDAP_BASE=DC=gtld
+LDAP_DOMAIN=domain
+LDAP_HOST=ldap.host.domain.gtld
+LDAP_PORT=389
+
+JWT_SECRET=supersecretkey
+
+
 CYLANCE_USERNAME=my.user@account
 CYLANCE_PASSWORD=SuperSecretPa$$word
 
@@ -41,3 +52,9 @@ SECURITYCENTER_USERNAME=security.username
 SECURITYCENTER_PASSWORD=security.pa$$word
 
 PHISHME_TOKEN=your.phishme.token
+
+
+ADMIN_GRP="CN=something,OU=something,DC=domain,DC=gtld"
+
+READ_ONLY_GRP="CN=something,OU=something,DC=domain,DC=gtld"
+
