--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "dingo/api": "1.0.x@dev",
         "adldap/adldap": "4.0.4.x-dev",
         "phpseclib/phpseclib": "^2.0",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "silber/bouncer": "^1.0"
     },
     "minimum-stability": "dev",
     "require-dev": {
