--- a/.env.example
+++ b/.env.example
@@ -36,25 +36,25 @@ LDAP_USER=null
 LDAP_PASS=null
 LDAP_BASE=DC=gtld
 LDAP_DOMAIN=domain
-LDAP_HOST=ldap.host.domain.gtld
+LDAP_HOST=ldaphost.domain.com
 LDAP_PORT=389
 
 JWT_SECRET=supersecretkey
 
+CYLANCE_USERNAME=cylance_username
+CYLANCE_PASSWORD=cylance_password
 
-CYLANCE_USERNAME=my.user@account
-CYLANCE_PASSWORD=SuperSecretPa$$word
+IRONPORT_USERNAME=ironport_username
+IRONPORT_PASSWORD=ironport_password
 
-IRONPORT_USERNAME=my.user.name
-IRONPORT_PASSWORD=AnotherSuperSecretPa$$word
+SECURITYCENTER_USERNAME=securitycenter_username
+SECURITYCENTER_PASSWORD=securitycenter_password
 
-SECURITYCENTER_USERNAME=security.username
-SECURITYCENTER_PASSWORD=security.pa$$word
+PHISHME_TOKEN=yourphishmetoken
 
-PHISHME_TOKEN=your.phishme.token
+LANCOPE_USERNAME=lancope_username
+LANCOPE_PASSWORD=lancope_password
 
-
-ADMIN_GRP="CN=something,OU=something,DC=domain,DC=gtld"
-
-READ_ONLY_GRP="CN=something,OU=something,DC=domain,DC=gtld"
+ADMIN_GRP="CN=something,OU=something,DC=domain,DC=com"
+READ_ONLY_GRP="CN=something,OU=something,DC=domain,DC=com"
 
