created commands for pulling active, allowed, blocked and suspicious threat details for each device a particular threat is found on

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "tymon/jwt-auth": "^1.0",
         "silber/bouncer": "^1.0",
         "doctrine/dbal": ">=2.5",
-        "nesbot/carbon": "~1.21"
+        "nesbot/carbon": "~1.21",
+        "phpreboot/stopwatch": "^1.0"
     },
     "minimum-stability": "dev",
     "require-dev": {
