--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.4.*",
         "metaclassing/utility": "dev-master",
         "dingo/api": "1.0.x@dev",
         "adldap/adldap": "4.0.4.x-dev",
@@ -21,13 +21,14 @@
         "silber/bouncer": "^1.0",
         "doctrine/dbal": ">=2.5",
         "nesbot/carbon": "~1.21",
-        "phpreboot/stopwatch": "^1.0"
+        "phpreboot/stopwatch": "^1.0",
+        "rapide/laravel-queue-kafka": "dev-master"
     },
     "minimum-stability": "dev",
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
+        "phpunit/phpunit": "~5.7",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*"
     },
