updated example environment file

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_ENV=local
 APP_KEY=base64:JNqhIEUgo65kKa64aupGDVBlSANDgQEyXauUABCDEFG
 APP_DEBUG=true
+APP_LOG=daily
 APP_LOG_LEVEL=debug
 APP_URL=http://myapp.mydomain.mytld
 
@@ -29,10 +30,6 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-PUSHER_APP_ID=
-PUSHER_KEY=
-PUSHER_SECRET=
-
 LDAP_AUTH=1
 LDAP_USER=null
 LDAP_PASS=null
@@ -40,6 +37,8 @@ LDAP_BASE=DC=gtld
 LDAP_DOMAIN=domain
 LDAP_HOST=ldaphost.domain.com
 LDAP_PORT=389
+
+KAFKA_BROKERS=kafka_ip:kafka_port
 
 ADMIN_GRP="CN=something,OU=something,DC=domain,DC=com"
 READ_ONLY_GRP="CN=something,OU=something,DC=domain,DC=com"
@@ -49,13 +48,12 @@ CYLANCE_PASSWORD=cylance_password
 
 IRONPORT_USERNAME=ironport_username
 IRONPORT_PASSWORD=ironport_password
+IRONPORT_SMA=ironport_sma_url
 
 SECURITYCENTER_USERNAME=securitycenter_username
 SECURITYCENTER_PASSWORD=securitycenter_password
+SECURITYCENTER_URL=securitycenter_url
 
 PHISHME_TOKEN=yourphishmetoken
-
-LANCOPE_USERNAME=lancope_username
-LANCOPE_PASSWORD=lancope_password
 
 SERVICENOW_AUTH=servicenow_api_token
