Triage commands, started on Nexpose command, and command to reindex specific sets of indices in Elastic

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,18 @@ SECURITYCENTER_URL=securitycenter_url
 PHISHME_TOKEN=yourphishmetoken
 
 SERVICENOW_AUTH=servicenow_api_token
+
+SCCM_ALL_SYSTEMS_FILE=path to sccm all systems file
+
+PROOFPOINT_AUTH=Proofpoint API key
+
+MS_TENANT_ID=Microsoft tenant ID
+MS_APP_ID=Microsoft App ID
+MS_PWD=Microsoft password
+
+CAS_URL=Microsoft CAS URL
+CAS_TOKEN=Microsoft CAS token
+
+NEXPOSE_URL=Nexpose URL
+NEXPOSE_USERNAME=Nexpose username
+NEXPOSE_PASSWORD=Nexpose password
