updated example environment file

--- a/.env.example
+++ b/.env.example
@@ -63,8 +63,11 @@ SCCM_ALL_SYSTEMS_FILE=path to sccm all systems file
 PROOFPOINT_AUTH=Proofpoint API key
 
 MS_TENANT_ID=Microsoft tenant ID
-MS_APP_ID=Microsoft App ID
-MS_PWD=Microsoft password
+MS_APP_ID=App ID
+MS_APP_KEY=App secret/key
+MS_OAUTH_TOKEN_ENDPOINT=Microsoft token endpoint
+
+DEFENDER_ALERTS_ENDPOINT=Windows Defender ATP alerts endpoint
 
 CAS_URL=Microsoft CAS URL
 CAS_TOKEN=Microsoft CAS token
