--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,9 @@ LDAP_DOMAIN=domain
 LDAP_HOST=ldaphost.domain.com
 LDAP_PORT=389
 
+ELASTIC_AUTH=first.last:password base64 encoded
+ELASTIC_CLUSTER=url to elastic including port
+
 KAFKA_BROKERS=kafka_ip:kafka_port
 
 ADMIN_GRP="CN=something,OU=something,DC=domain,DC=com"
@@ -46,15 +49,19 @@ READ_ONLY_GRP="CN=something,OU=something,DC=domain,DC=com"
 CYLANCE_USERNAME=cylance_username
 CYLANCE_PASSWORD=cylance_password
 
-IRONPORT_USERNAME=ironport_username
-IRONPORT_PASSWORD=ironport_password
-IRONPORT_SMA=ironport_sma_url
+CYLANCE_AUTH_URL=Cylance Protect API auth URL
+CYLANCE_ENDPOINT=Cylance Protect API url
+CYLANCE_TENANT_ID=Cylance tenant ID
+CYLANCE_APP_ID=Cylance app ID
+CYLANCE_APP_SECRET=Cylance app secret
 
 SECURITYCENTER_USERNAME=securitycenter_username
 SECURITYCENTER_PASSWORD=securitycenter_password
 SECURITYCENTER_URL=securitycenter_url
 
-PHISHME_TOKEN=yourphishmetoken
+TRIAGE_TOKEN=PhishMe Triage token
+TRIAGE_URL=PhishMe Triage API endpoint
+TRIAGE_EMAIL=PhishMe Triage email
 
 SERVICENOW_AUTH=servicenow_api_token
 
@@ -65,13 +72,25 @@ PROOFPOINT_AUTH=Proofpoint API key
 MS_TENANT_ID=Microsoft tenant ID
 MS_APP_ID=App ID
 MS_APP_KEY=App secret/key
-MS_OAUTH_TOKEN_ENDPOINT=Microsoft token endpoint
+MS_OAUTH_AUTHORIZE_ENDPOINT=Microsoft OAuth authorization endpoint
+MS_OAUTH_TOKEN_ENDPOINT=Micrsoft OAuth token endpoint
+MS_OAUTH_TOKEN_ENDPOINT2=https://login.microsoftonline.com/common/oauth2/v2.0/token
+
+SPECTRE_AUTH_CODE=Spectre auth code
+SPECTRE_REDIRECT_URI=Spectre redirect URI
+SPECTRE_CLIENT_ID=Spectre client ID
+SPECTRE_CLIENT_SECRET=Spectre client secret
 
 DEFENDER_ALERTS_ENDPOINT=Windows Defender ATP alerts endpoint
 
 CAS_URL=Microsoft CAS URL
 CAS_TOKEN=Microsoft CAS token
 
-NEXPOSE_URL=Nexpose URL
+NEXPOSE_URL=Nexpose URL using domain name
+NEXPOSE_URL2=Nexpose URL using IP
 NEXPOSE_USERNAME=Nexpose username
 NEXPOSE_PASSWORD=Nexpose password
+NEXPOSE_USERNAME2=Nexpose admin username
+NEXPOSE_PASSWORD2=Nexpose admin password
+
+SLACK_WEBHOOK_INDEX_HEALTH_CHECK=Slack webhook for index-health-checks channel
