added placeholder for Elastic 7.0.0 cluster URL in the environment file

--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,8 @@ LDAP_HOST=ldaphost.domain.com
 LDAP_PORT=389
 
 ELASTIC_AUTH=first.last:password base64 encoded
-ELASTIC_CLUSTER=url to elastic including port
+ELASTIC_CLUSTER=url to elastic 6.2.1 including port
+ELASTIC_7_CLUSTER=url to elastic 7.0.0 cluster including port
 
 KAFKA_BROKERS=kafka_ip:kafka_port
 
